--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-popup": "^0.10.0",
     "react-scripts": "3.1.2",
     "react-table": "^6.10.3",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "sweetalert2": "^9.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
