--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "nodemon": "^2.0.0",
         "react": "^16.10.2",
         "react-dom": "^16.10.2",
-        "reactstrap": "^8.0.1"
+        "reactstrap": "^8.0.1",
+        "sweetalert2": "^9.4.0"
     }
 }
